--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "betulon"
 dependencies = [
-    "mastodon.py==1.8.1"
+    "mastodon.py==1.8.1",
+    "markdownify==0.12.1"
 ]
 requires-python = ">=3.10"
 authors = [
